@@ -101,6 +101,8 @@ public class SolrSearchIndex implements SearchIndex {
 
 	private static final int SOLR_COMMIT_WITHIN_MAX = 10000;
 
+	private String defaultSortLang = null;
+
 	private boolean extractFulltext = false;
 
 	private boolean related = false;
@@ -139,9 +141,9 @@ public class SolrSearchIndex implements SearchIndex {
 				postQueue.cleanUp();
 				int batchCount = 0;
 
-				if (postQueue.estimatedSize() > 0 || deleteQueue.size() > 0) {
+				if (postQueue.estimatedSize() > 0 || !deleteQueue.isEmpty()) {
 
-					if (deleteQueue.size() > 0) {
+					if (!deleteQueue.isEmpty()) {
 						StringBuilder deleteQuery = new StringBuilder("uri:(");
 						synchronized (deleteQueue) {
 							while (batchCount < BATCH_SIZE_DELETE) {
@@ -276,6 +278,7 @@ public class SolrSearchIndex implements SearchIndex {
 		this.solrServer = solrServer;
 		extractFulltext = "on".equalsIgnoreCase(rm.getConfiguration().getString(Settings.SOLR_EXTRACT_FULLTEXT, "off"));
 		related = "on".equalsIgnoreCase(rm.getConfiguration().getString(Settings.SOLR_RELATED, "off"));
+		defaultSortLang = rm.getConfiguration().getString(Settings.SOLR_DEFAULT_SORTING_LANG);
 		if (related) {
 			List<String> relPropsSetting = rm.getConfiguration().getStringList(Settings.SOLR_RELATED_PROPERTIES, new ArrayList<String>());
 			if (relPropsSetting.isEmpty()) {
@@ -341,7 +344,7 @@ public class SolrSearchIndex implements SearchIndex {
 			deleteQuery += "indexedAt:[* TO " + solrExpirationDate + "}";
 		}
 		if (contextEntry != null) {
-			if (deleteQuery.length() > 0) {
+			if (!deleteQuery.isEmpty()) {
 				deleteQuery += " AND ";
 			}
 			deleteQuery += "context:" + ClientUtils.escapeQueryChars(contextEntry.getResourceURI().toString());
@@ -381,7 +384,7 @@ public class SolrSearchIndex implements SearchIndex {
 			if (reindexing.containsKey(contextURI)) {
 				Future existingIndexer = reindexing.get(contextURI);
 				if (!existingIndexer.isDone()) {
-					log.info("Cancelling existing indexer thread for " + contextURI);
+					log.info("Cancelling existing indexer thread for {}", contextURI);
 					existingIndexer.cancel(true);
 				}
 				reindexing.remove(contextURI);
@@ -475,6 +478,19 @@ public class SolrSearchIndex implements SearchIndex {
 
 	public boolean isIndexing(URI contextURI) {
 		return reindexing.containsKey(contextURI);
+	}
+
+	public Set<URI> getIndexingContexts() {
+		return reindexing.keySet();
+	}
+
+	public long getPostQueueSize() {
+		postQueue.cleanUp();
+		return postQueue.estimatedSize();
+	}
+
+	public long getDeleteQueueSize() {
+		return deleteQueue.size();
 	}
 
 	@Override
@@ -652,7 +668,7 @@ public class SolrSearchIndex implements SearchIndex {
 
 		// titles
 		Map<String, String> titles = EntryUtil.getTitles(entry);
-		if (titles != null && titles.size() > 0) {
+		if (titles != null && !titles.isEmpty()) {
 			Set<String> langs = new HashSet<>();
 			for (String title : titles.keySet()) {
 				doc.addField("title", title);
@@ -661,6 +677,10 @@ public class SolrSearchIndex implements SearchIndex {
 				String lang = titles.get(title);
 				if (lang == null) {
 					lang = "nolang";
+				} else if (lang.equalsIgnoreCase(defaultSortLang) && !langs.contains("default")) {
+					// if a default sorting language is configured, we create a field for that
+					doc.addField("title.default", title);
+					langs.add("default");
 				}
 				// we only want one title per language, otherwise sorting will not work
 				if (!langs.contains(lang)) {
@@ -678,7 +698,7 @@ public class SolrSearchIndex implements SearchIndex {
 		if (lastName != null) {
 			name += " " + lastName;
 		}
-		if (name.length() > 0) {
+		if (!name.isEmpty()) {
 			doc.addField("title", name);
 		}
 
@@ -705,7 +725,7 @@ public class SolrSearchIndex implements SearchIndex {
 
 		// description
 		Map<String, String> descriptions = EntryUtil.getDescriptions(entry);
-		if (descriptions != null && descriptions.size() > 0) {
+		if (descriptions != null && !descriptions.isEmpty()) {
 			for (String description : descriptions.keySet()) {
 				doc.addField("description", description);
 				String lang = descriptions.get(description);
@@ -937,15 +957,18 @@ public class SolrSearchIndex implements SearchIndex {
 
 	public void removeEntry(Entry entry) {
 		URI entryURI = entry.getEntryURI();
-		synchronized (deleteQueue) {
-			log.info("Adding entry to Solr delete queue: " + entryURI);
-			deleteQueue.add(entryURI);
-		}
+
 		synchronized (postQueue) {
 			// we make sure that the entry is not added again after deletion
 			// if the queues are handled at different times
 			postQueue.invalidate(entryURI);
 		}
+
+		synchronized (deleteQueue) {
+			log.info("Adding entry to Solr delete queue: " + entryURI);
+			deleteQueue.add(entryURI);
+		}
+
 		// if entry is a context, also remove all entries inside
 		if (GraphType.Context.equals(entry.getGraphType())) {
 			clearSolrIndex(solrServer, null, entry);
@@ -1030,14 +1053,18 @@ public class SolrSearchIndex implements SearchIndex {
 				try {
 					Entry entry = rm.getContextManager().getEntry(uri);
 					if (entry != null) {
+						if (entry.isDeleted()) {
+							log.warn("Deleted entry {} is still in Solr index, removing it now", uri);
+							removeEntry(entry);
+							throw new IllegalStateException("Cannot return deleted entry in search result: " + uri);
+						}
 						PrincipalManager pm = entry.getRepositoryManager().getPrincipalManager();
 						// If linkReference or reference to a entry in the same
 						// repository
 						// check that the referenced metadata is accessible.
 						if ((entry.getEntryType() == EntryType.Reference || entry.getEntryType() == EntryType.LinkReference)
 								&& entry.getCachedExternalMetadata() instanceof LocalMetadataWrapper) {
-							Entry refEntry = entry.getRepositoryManager().getContextManager()
-									.getEntry(entry.getExternalMetadataURI());
+							Entry refEntry = entry.getRepositoryManager().getContextManager().getEntry(entry.getExternalMetadataURI());
 							pm.checkAuthenticatedUserAuthorized(refEntry, AccessProperty.ReadMetadata);
 						} else {
 							// Check that the local metadata is accessible.
@@ -1049,7 +1076,7 @@ public class SolrSearchIndex implements SearchIndex {
 							break;
 						}
 					}
-				} catch (AuthorizationException ae) {
+				} catch (AuthorizationException | IllegalStateException e) {
 					inaccessibleHits++;
 					continue;
 				}
@@ -1065,7 +1092,7 @@ public class SolrSearchIndex implements SearchIndex {
 		// probing requests.
 		//
 		// Test if the condition covers to much and add "offset == 0 &&" if necessary
-		if (result.size() == 0 && hits > 0) {
+		if (result.isEmpty() && hits > 0) {
 			adjustedHitCount = 0;
 		}
 
@@ -1080,7 +1107,7 @@ public class SolrSearchIndex implements SearchIndex {
 			QueryResponse r = solrServer.query(q);
 			SolrDocumentList docs = r.getResults();
 			if (!docs.isEmpty()) {
-				return docs.get(0);
+				return docs.getFirst();
 			}
 		} catch (SolrServerException | IOException e) {
 			log.error(e.getMessage());
